[package]
name = "n3on-diff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.5", features = ["derive"] }
libafl = "0.13.2"
libafl_bolts = "0.13.2"
serde = "1.0.210"
serde_json = "1.0.128"
